Fix layout bugs in the gallery page

--- a/assets/css/stickies.css
+++ b/assets/css/stickies.css
@@ -210,7 +210,7 @@ body {
 }
 
 .trending-platform ol li a:hover {
-    text-decoration: underline;
+    /* text-decoration: underline; */
     color: #000;
 }
 
